# trainer-classification

./: .env  .gitignore  .hafniaignore  .pre-commit-config.yaml  Dockerfile  DockerfileExample  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: train.json  train.py
src/: train_utils.py
src/lib/: train_utils.py
src/recipe_classification/: train_utils.py
src/scripts/: train.py
src/trainer_classification/: train_utils.py
tests/: test_recipe.py
