[project]
name = "trainer-classification"
version = "0.1.0"
description = "Image classification trainer for the Hafnia Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hafnia>=0.4.3",
    "lark>=1.2.2",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "torch>=2.6.0",
    "torchmetrics>=1.7.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
# Adding hafnia:
# - As a package with "uv add hafnia==0.4.1"
# - As a local editable install "uv add --editable ../hafnia"
# - As a package from git - in this example the main branch: "uv add git+https://github.com/milestone-hafnia/hafnia.git@main"


[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 120 # This should match the 'line-length' in 'pyproject.toml'
lint.select = ["C4", "E", "F","B", "I", "W", "RUF", "Q"]
