[project]
name = "trainer-classification"
version = "0.1.0"
description = "Image classification trainer for the Hafnia Platform"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Milestone Systems", email = "hafniaplatform@milestone.dk" },
]

dependencies = [
    "cyclopts>=4.4.6",
    "docstring-parser>=0.17.0",
    "lark>=1.2.2",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.10",
    "pytest>=8.3.5",
    "torch>=2.6.0",
    "torchmetrics>=1.7.0",
    "torchvision>=0.24.0",
    "opencv-python-headless>4.13", # Issues in 4.13.0.90" for small images
    "tqdm>=4.67.1",
    "hafnia==0.5.4",
]

# Adding hafnia:
# - As a package with "uv add hafnia==0.4.1"
# - As a local editable install "uv add --editable ../hafnia"
# - As a package from git - in this example the main branch: "uv add git+https://github.com/milestone-hafnia/hafnia.git@main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trainer_classification"]


[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 120                                         # This should match the 'line-length' in 'pyproject.toml'
lint.select = ["C4", "E", "F", "B", "I", "W", "RUF", "Q"]

[tool.pytest.ini_options]
pythonpath = ["."]
